// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active errored label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 16,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(255, 0, 0, 1)",
        "fontSize": 12,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`renders active focused label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 16,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0, 0, 255, 1)",
        "fontSize": 12,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`renders active label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 16,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0, 0, 0, 1)",
        "fontSize": 12,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`renders errored label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(255, 0, 0, 1)",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`renders label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0, 0, 0, 1)",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`renders restricted label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "red",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`renders styled label 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0, 0, 0, 1)",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlignVertical": "top",
        "textTransform": "uppercase",
      }
    }
  >
    test
  </Text>
</View>
`;
